--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<h3 ><a href="stress/stress.html">Relax</h3></a>
 	Stressed out? Stress can weaken the immune system and cause high blood pressure, fatigue, depression, anxiety, and even heart disease. Learn ways to manage and reduce stress.
 	
-	<a href="diet/diet.html" ><h3>Eat what's right for you</h3> </a>
+	<h3><a href="diet/diet.html" >Eat what's right for you</h3> </a>
 	Are you really what you eat? Lose weight, gain weight, or just feel great! Maintaining a healthy diet is probably the most important thing you can do to promote overall health.
 	
 	Additional resources
