--- a/shapeup/index.html
+++ b/shapeup/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<img src="images/shape_up_logo.png" alt="Shape Up">
+		<a href="../index.html">	<img src="images/shape_up_logo.png" alt="Shape Up"> </a>
 		<h1>Shape Up!</h1>
 		<h2>Find the best fit for you</h2>
 	</header>
