--- a/shapeup/strength/strength.html
+++ b/shapeup/strength/strength.html
@@ -4,12 +4,103 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shape Up! | Strength Training</title>
+	<link rel="Icon" href="../images/favicon.ico">
+	<link rel="stylesheet" href="../styles/strength.css">
 </head>
 
 <body>
+	<header>
+	<a href="../index.html">	<img src="../images/shape_up_logo.png" alt="Shape Up"> </a>
+		<h1>Shape Up!</h1>
+		<h2>Find the best fit for you</h2>
+	</header>
+	<nav class="navbar">
+		<ul class="menu">
+		
+		
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="#" class="current">Strength Training</a></li>
+			<li><a>Cardio Exercises</a></li>
+			<li><a href="stress/stress.html">Stress Relief<small>&#9662;</small></a>
+		
+			<ul class="submenu">
+		
+				<li><a href="../stress/stress.html">What is Stress</a></li>	
+				<li><a href="../stress/tips.html">5 Helpful Tips</a></li>
+				<li><a>Meditation</a></li>
+				<li><a>Vipassana</a></li>
+		
+			</ul>
+		</Li>
+		
+			<Li><a>Healthy Diets<small>&#9662;</small></a>
+		<ul class="submenu">
+		
+			<li><a>Why a Healthy Diet?</a></li>
+			<li><a>Plan Your Meals</a></li>
+			<li><a>Count Your Calories</a></li>
+			<li><a>Calculate Your BMI</a></li>  
+		
+		
+		</ul>
+		</Li>
+		
+		</ul>
+			</nav>
 	<main>
+		<section>
 	    <h1>Strength Training</h1>
-		<h2>Under Construction</h2>
-	</main>
+
+Strength training is a type of physical exercise that uses resistance to induce muscular contraction. This builds the strength, anaerobic endurance, and size of skeletal muscles.
+
+<h3><a>Benefits</h3></a>
+
+When properly performed, strength training can provide significant functional benefits and improvement in overall health and well-being. Some of the benefits are:
+<ul>
+<li>increased bone, muscle, tendon, and ligament strength and toughness</li>
+<li>improved joint function</li>
+<li>reduced potential for injury</li>
+<li>increased bone density</li>
+<li>increased metabolism</li>
+<li>improved cardiac function</li>
+</ul>
+<h3><a>Exercises and sports</h3></a>
+
+Training commonly uses the technique of progressively increasing the force output of the muscle through incremental weight increases. It uses a variety of exercises and types of equipment to target specific muscle groups.
+Some sports where strength training is central are bodybuilding, weightlifting, shotput, discus throw, and javelin throw. Many other sports use strength training as part of their training regimen. These include tennis, American football, wrestling, track and field, rowing, lacrosse, basketball, hockey, wrestling, and soccer.
+
+<h3><a>Additional information</h3></a>
+Want to start a strength training regimen? Send an email to <a href ="#">strengthtraining@shapeup.com</a> or call us at <a href ="#">555-555-5555</a> and we'll send you a our complimentary strength training program.
+</section>
+<aside>
+	<h1>Additional resources</h1>
+	<ul>
+	<li>
+		<a href="https://www.cdc.gov/physical-activity-basics/benefits/index.html">Physical activity and health</a>
+	
+</li>
+<li>
+	<a href="	https://www.heart.org/en/healthy-living/fitness/fitness-basics/flexibility-exercise-stretching">Stretching exercises</a>
+	
+</li>
+<li>
+	<a href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/strength-and-resistance-training-exercise">	Strength training</a>
+	
+</li>
+<li>
+	<a href="https://www.health.harvard.edu/exercise-and-fitness/interval-training-for-a-stronger-heart">Cardiovascular training</a>
+	
+</li>
+<li>
+	<a href="https://www.self.com/gallery/power-yoga-workout"> Yoga workout </a>
+	
+</li>
+</ul>
+</aside>
+</main>
 </body>
+<footer>
+	<p>&copy; Shape Up!</p>
+</footer>
+
 </html>
