--- a/shapeup/strength/strength.html
+++ b/shapeup/strength/strength.html
@@ -21,7 +21,7 @@
 			<li><a href="../index.html">Home</a></li>
 			<li><a href="#" class="current">Strength Training</a></li>
 			<li><a>Cardio Exercises</a></li>
-			<li><a href="stress/stress.html">Stress Relief<small>&#9662;</small></a>
+			<li><a href="../stress/stress.html">Stress Relief<small>&#9662;</small></a>
 		
 			<ul class="submenu">
 		
