--- a/shapeup/stress/stress.html
+++ b/shapeup/stress/stress.html
@@ -3,13 +3,116 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../styles/stress.css">
 	<title>Shape Up! | Stress</title>
 </head>
 
 <body>
+	<header>
+		<a href="../index.html">	<img src="../images/shape_up_logo.png" alt="Shape Up"> </a>
+			<h1>Shape Up!</h1>
+			<h2>Find the best fit for you</h2>
+		</header>
+		<nav class="navbar">
+			<ul class="menu">
+			
+			
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../strength/strength.html" >Strength Training</a></li>
+				<li><a>Cardio Exercises</a></li>
+				<li><a href="#" class="current">Stress Relief<small>&#9662;</small></a>
+			
+				<ul class="submenu">
+			
+					<li><a href="../stress/stress.html">What is Stress</a></li>	
+					<li><a href="../stress/tips.html">5 Helpful Tips</a></li>
+					<li><a>Meditation</a></li>
+					<li><a>Vipassana</a></li>
+			
+				</ul>
+			</Li>
+			
+				<Li><a>Healthy Diets<small>&#9662;</small></a>
+			<ul class="submenu">
+			
+				<li><a>Why a Healthy Diet?</a></li>
+				<li><a>Plan Your Meals</a></li>
+				<li><a>Count Your Calories</a></li>
+				<li><a>Calculate Your BMI</a></li>  
+			
+			
+			</ul>
+			</Li>
+			
+			</ul>
+				</nav>
     <main>
+
+		<section>
+
         <h1>Stress Relief</h1>
-        <h2>Under Construction</h2>
+      
+			
+		
+			We all encounter stress at one time or another. So it's important to be able to recognize stress and learn how to deal with it.
+			
+		<h3><a>What is stress?</h3></a>
+		<article class="clearfix">
+		<figure>	<img src="../images/stress.jpg" alt="Stressed Worker">
+			<figcaption>
+
+				Stress can come from work, family, or health problems
+				
+			</figcaption>
+
+		</figure>
+		<div class="text-content">
+			<p>Stress is the feeling that people have when they are overloaded and struggling to cope with demands. Anything that poses a real or perceived challenge or threat to a person's well-being can cause stress.
+			</p>
+		<p>Stress can also be a motivator. It can be essential to survival. The &quot;fight-or-flight&quot; mechanism helps us know when and how to respond to danger. But when this mechanism is triggered too easily, or when there are too many stressors at one time, it can become harmful to a person's mental and physical health.
+		</p>
+	</div>
+	</article>
+		<h3><a>How to manage your stress</h3></a>
+			
+			To help manage stress, try the following:
+			<ul>
+			<li>Take a break from what you're doing</li>
+		<li>	Exercise on a regular basis</li>
+		<li>	Take time to smile and laugh</li>
+		<li>Get support from family and friends</li>
+		<li>Meditate</li>
+		</ul>
+
+		</section>
+		<aside>
+			<h1>Additional resources</h1>
+			<ul>
+			<li>
+				<a href="https://www.cdc.gov/physical-activity-basics/benefits/index.html">Physical activity and health</a>
+			
+		</li>
+		<li>
+			<a href="	https://www.heart.org/en/healthy-living/fitness/fitness-basics/flexibility-exercise-stretching">Stretching exercises</a>
+			
+		</li>
+		<li>
+			<a href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/strength-and-resistance-training-exercise">	Strength training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.health.harvard.edu/exercise-and-fitness/interval-training-for-a-stronger-heart">Cardiovascular training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.self.com/gallery/power-yoga-workout"> Yoga workout </a>
+			
+		</li>
+		</ul>
+		</aside>
 	</main>
 </body>
+<footer>
+	<p>&copy; Shape Up!</p>
+</footer>
 </html>
