--- a/shapeup/diet/calories.html
+++ b/shapeup/diet/calories.html
@@ -4,12 +4,444 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shape Up! | Calorie Counter</title>
+	<link rel="stylesheet" href="../styles/calorie.css">
 </head>
-
+<header>
+	<a href="../index.html">	<img src="../images/shape_up_logo.png" alt="Shape Up"> </a>
+			<h1>Shape Up!</h1>
+			<h2>Find the best fit for you</h2>
+		</header>
+		<nav class="navbar">
+			<ul class="menu">
+			
+			
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../strength/strength.html" >Strength Training</a></li>
+				<li><a>Cardio Exercises</a></li>
+				<li><a href="../stress/stress.html">Stress Relief<small>&#9662;</small></a>
+			
+				<ul class="submenu">
+			
+					<li><a href="../stress/stress.html">What is Stress</a></li>	
+					<li><a href="../stress/tips.html">5 Helpful Tips</a></li>
+					<li><a>Meditation</a></li>
+					<li><a>Vipassana</a></li>
+			
+				</ul>
+			</Li>
+			
+				<Li><a class="current">Healthy Diets<small>&#9662;</small></a>
+			<ul class="submenu">
+			
+				<li><a>Why a Healthy Diet?</a></li>
+				<li><a>Plan Your Meals</a></li>
+				<li><a href="#" >Count Your Calories</a></li>
+				<li><a>Calculate Your BMI</a></li>  
+			
+			
+			</ul>
+			</Li>
+			
+			</ul>
+				</nav>
 <body>
 	<main>
-	    <h1>Calorie Counter</h1>
-		<h2>Under Construction</h2>	      
+		<section>
+	    
+		<figure>
+			<table>
+				<figcaption> <h1>Calorie Counter</h1></figcaption>
+	<thead>
+	<tr>
+	<th  class="first"> Category</th>
+	<th class="second"> Food</th>
+	<th class="third"> Serving Size</th>
+	<th  class="right" class="four"> Calories</th>
+	</tr >
+	</thead>
+
+	<tbody>
+
+
+
+
+
+
+<tr>
+<th class="first">Beef</th>
+<td>
+	<div>
+		Frankfurter, Beef
+	</div>
+	<div>
+		Ground Beef
+	</div>
+	<div>
+		T-Bone Steak
+	</div>
+</td>
+<td>
+	<div>
+1 each
+	</div>
+	<div>
+4 oz
+	</div>
+	<div>
+		8 ounces
+	</div>
+</td>
+<td>
+	<div>
+184
+	</div>
+	<div>
+264
+	</div>
+	<div>
+		402
+	</div>
+</td>
+</tr>
+
+
+
+
+
+
+
+
+	<th class="first">Bread</th>
+
+<td>
+	<div>
+Bagel, plain
+	</div>
+	<div>
+Bread, sliced
+	</div>
+	
+	<div>
+		English Muffin
+	</div>
+</td>
+
+<td>
+	<div>
+1 Bagel
+	</div>
+	<div>
+1 Slice
+	</div>
+	<div>
+		1
+	</div>
+</td>
+
+<td>
+	<div>
+360
+	</div>
+	<div>
+60 to 80
+	</div>
+	<div>
+		135
+	</div>
+
+</td>
+
+</tr>
+
+	<th class="first">Cereal</th>
+
+<td>
+
+	<div>
+Cheerios
+	</div>
+	<div>
+Corn Flakes
+	</div>
+	<div>
+		Oatmeal, quick
+	</div>
+
+</td>
+
+<td>
+	
+	<div>
+1 cup
+	</div>
+	<div>
+1 cup
+	</div>
+	<div>
+		1 cup cooked
+	</div>
+</td>
+
+<td>
+	
+	<div>
+110
+	</div>
+	<div>
+140
+	</div>
+	
+	<div>
+		145
+	</div>
+
+
+</td>
+
+</tr>
+
+	<th class="first">Cheese</th>
+
+<td>
+
+	<div>
+American
+	</div>
+	<div>
+Swiss
+	</div>
+	
+	<div>
+		Cheddar
+	</div>
+	<div>
+		Cottage Cheese, regular
+	</div>
+
+</td>
+
+<td>
+	
+	<div>
+1 ounce
+	</div>
+	<div>
+1 ounce
+	</div>
+	<div>
+		1 ounce
+	</div>
+<div>
+		1/2 cup
+	</div>
+</td>
+
+<td>
+	
+	<div>
+106
+	</div>
+	<div>
+100
+	</div>
+	114
+	<div>
+	</div>
+	<div>
+		117
+	</div>
+
+</td>
+
+</tr>
+	<tr>
+
+<th class="first">Fruit</th>
+
+<td>
+
+	<div>
+Apple
+	</div>
+	<div>
+Banana
+	</div>
+
+</td>
+
+<td>
+	
+	<div>
+1 Medium
+	</div>
+	<div>
+1
+	</div>
+</td>
+
+<td>
+	
+	<div>
+80
+	</div>
+	<div>
+105
+	</div>
+
+</td>
+
+
+</tr>
+
+
+<tr>
+<th class="first">Vegetables</th>
+<td>
+	<div>
+		Corn, fresh
+	</div>
+	<div>
+		Carrot, raw
+	</div>
+	<div>
+		Celery
+	</div>
+</td>
+<td>
+	<div>
+	1 medium ear
+	</div>
+	<div>
+1 medium
+	</div>
+	<div>
+		1 large stalk
+	</div>
+</td>
+<td>
+	<div>
+88
+	</div>
+	<div>
+25
+	</div>
+	<div>
+		9
+	</div>
+</td>
+</tr>
+
+<tr>
+<th class="first">Miscellaneous</th>
+<td>
+	<div>
+		Milk, whole
+	</div>
+	<div>
+		Eggs
+	</div>
+	<div>
+		Peanut butter
+	</div>
+	<div>
+		Pasta
+	</div>
+	<div>
+		Rice
+	</div>
+	<div>
+		Canned tuna, in water
+	</div>
+	<div>
+	Baked potato
+	</div>
+</td>
+
+<td>
+	<div>
+	1 cup
+	</div>
+	<div>
+1
+	</div>
+	<div>
+		2 tablespoons
+	</div>
+	<div>
+		1/2 cup dry
+	</div>
+	<div>
+		1 cup cooked
+	</div>
+	<div>
+		2 ounces
+	</div>
+	<div>
+		1 medium
+	</div>
+</td>
+
+<td>
+	<div>
+157
+	</div>
+	<div>
+70
+	</div>
+	<div>
+	188
+	</div>
+	<div>
+		200
+	</div>
+	<div>
+		204
+	</div>
+	<div>
+		70
+	</div>
+	<div>
+		130
+	</div>
+</td>
+</tr>
+
+
+
+
+	</tbody>
+		
+			</table>
+			</figure>
+		     </section>
+		<aside>
+			<h1>Additional resources</h1>
+			<ul>
+			<li>
+				<a href="https://www.cdc.gov/physical-activity-basics/benefits/index.html">Physical activity and health</a>
+			
+		</li>
+		<li>
+			<a href="	https://www.heart.org/en/healthy-living/fitness/fitness-basics/flexibility-exercise-stretching">Stretching exercises</a>
+			
+		</li>
+		<li>
+			<a href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/strength-and-resistance-training-exercise">	Strength training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.health.harvard.edu/exercise-and-fitness/interval-training-for-a-stronger-heart">Cardiovascular training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.self.com/gallery/power-yoga-workout"> Yoga workout </a>
+			
+		</li>
+		</ul>
+		</aside>
     </main>
+	<footer>
+	<p>&copy; Shape Up!</p>
+</footer>
 </body>
 </html>
