--- a/shapeup/diet/calories.html
+++ b/shapeup/diet/calories.html
@@ -34,7 +34,7 @@
 			<ul class="submenu">
 			
 				<li><a>Why a Healthy Diet?</a></li>
-				<li><a>Plan Your Meals</a></li>
+				<li><a href="../diet/meals.html">Plan Your Meals</a></li>
 				<li><a href="#" >Count Your Calories</a></li>
 				<li><a>Calculate Your BMI</a></li>  
 			
