--- a/shapeup/index.html
+++ b/shapeup/index.html
@@ -38,7 +38,7 @@
 <ul class="submenu">
 
 	<li><a>Why a Healthy Diet?</a></li>
-    <li><a>Plan Your Meals</a></li>
+    <li><a href="diet/meals.html">Plan Your Meals</a></li>
     <li><a href="diet/calories.html">Count Your Calories</a></li>
     <li><a>Calculate Your BMI</a></li>  
 
