--- a/shapeup/stress/stress.html
+++ b/shapeup/stress/stress.html
@@ -26,7 +26,7 @@
 			
 					<li><a href="../stress/stress.html">What is Stress</a></li>	
 					<li><a href="../stress/tips.html">5 Helpful Tips</a></li>
-					<li><a>Meditation</a></li>
+					<li><a href="../stress/meditate.html">Meditation</a></li>
 					<li><a>Vipassana</a></li>
 			
 				</ul>
