--- a/shapeup/stress/meditate.html
+++ b/shapeup/stress/meditate.html
@@ -4,12 +4,110 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shape Up! | Meditation</title>
+		<link rel="stylesheet" href="../styles/meditate.css">
 </head>
-
+<header>
+	<a href="../index.html">	<img src="../images/shape_up_logo.png" alt="Shape Up"> </a>
+			<h1>Shape Up!</h1>
+			<h2>Find the best fit for you</h2>
+		</header>
+		<nav class="navbar">
+			<ul class="menu">
+			
+			
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../strength/strength.html" >Strength Training</a></li>
+				<li><a>Cardio Exercises</a></li>
+				<li><a class="current" href="../stress/stress.html">Stress Relief<small>&#9662;</small></a>
+			
+				<ul class="submenu">
+			
+					<li><a href="../stress/stress.html">What is Stress</a></li>	
+					<li><a href="../stress/tips.html">5 Helpful Tips</a></li>
+					<li><a  href="#">Meditation</a></li>
+					<li><a>Vipassana</a></li>
+			
+				</ul>
+			</Li>
+			
+				<Li><a >Healthy Diets<small>&#9662;</small></a>
+			<ul class="submenu">
+			
+				<li><a>Why a Healthy Diet?</a></li>
+				<li><a href="../diet/meals.html">Plan Your Meals</a></li>
+				<li><a href="../diet/calories.html" >Count Your Calories</a></li>
+				<li><a>Calculate Your BMI</a></li>  
+			
+			
+			</ul>
+			</Li>
+			
+			</ul>
+				</nav>
 <body>
 	<main>
-	    <h1>Meditation</h1>
-		<h2>Under Construction</h2>
+		<section>
+	    <h1>What is Meditation?</h1>
+
+Meditation is one path toward transforming the mind. Buddhist meditation practices encourage and develop concentration, clarity, and emotional positivity. When you begin a meditation practice, you may learn the patterns and habits of your mind. Meditation offers you a way to cultivate new and more positive ways to approach the things you do throughout your day. Meditation can have a transformative effect and can lead to positive changes as well as a new understanding of life.
+<h2>Video of a woman meditating</h2>
+<br>
+<video src="../media/meditation.mp4" width="800" height="450" controls></video>
+<br>
+<h2>Choose your meditation music</h2>
+<ul>
+<li><audio controls>
+  <source src="../media/ambient_grand_piano.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+ </li>
+ <li>
+<audio controls>
+<source src="../media/body_and_soul.mp3" type="audio/mp3">
+</audio>
+</li>
+<li>
+<audio controls>
+  <source src="../media/time_inevitability.mp3" type="audio/mp3">
+</audio>
+</li>
+<li>
+<audio controls>
+<source src="../media/waves_and_tears.mp3" type="audio/mp3">
+</audio>
+</li>
+</ul>
+		</section>
+
+<aside>
+			<h1>Additional resources</h1>
+			<ul>
+			<li>
+				<a href="https://www.cdc.gov/physical-activity-basics/benefits/index.html">Physical activity and health</a>
+			
+		</li>
+		<li>
+			<a href="	https://www.heart.org/en/healthy-living/fitness/fitness-basics/flexibility-exercise-stretching">Stretching exercises</a>
+			
+		</li>
+		<li>
+			<a href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/strength-and-resistance-training-exercise">	Strength training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.health.harvard.edu/exercise-and-fitness/interval-training-for-a-stronger-heart">Cardiovascular training</a>
+			
+		</li>
+		<li>
+			<a href="https://www.self.com/gallery/power-yoga-workout"> Yoga workout </a>
+			
+		</li>
+		</ul>
+		</aside>
 	</main>
+	
 </body>
+<footer>
+	<p>&copy; Shape Up!</p>
+</footer>
 </html>
